api-gateway/src/main/fabric8/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: api-challenge-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  rules:
#    - http:
#        paths:
#          - path: /*
#            backend:
#              serviceName: api-gateway
#              servicePort: 8080
  backend:
    serviceName: api-gateway
    servicePort: 8080
